- Architecture and skeleton implementation for the `build` command:
  - Designed modular object-oriented architecture for build process
  - Created skeleton structure for components with method signatures and docstrings
  - Set up protocol-based design with PProcessor interface for content processing
  - Added factory pattern for processor instantiation based on file types
  - Prepared context class hierarchy for state management during build
- Custom Jinja2 extension `ContentExtension` for processing content files:
  - Implemented as a proper Jinja2 extension with a dedicated tag
  - Renamed from `include_content` to `content` for more intuitive use in templates
  - Allows seamless integration of markdown and other content into HTML templates

### Changed

- Moved main.py into src/geraldmag/ directory for better organization
- Improved init command to continue process when files already exist (with warnings)
- Updated init command to use the Environment class for generating default configuration
- Enhanced Environment.load() to handle path-specific configuration parameters
- Extracted hardcoded templates from init.py to external files in template/init directory
- Switched from using Path(__file__) to importlib.resources for accessing template files
- Renamed 'template' directory to 'templates' and made it a proper Python package
- Replaced simple function-based approach for content inclusion with a dedicated Jinja2 extension
- Enhanced `Environment.create()` to accept additional parameters via `**kwargs` for better inheritance support
- Switched from uv to PDM for dependency management and script execution

### Planned

- Complete implementation of the build command components
- CLI integration of the build command
- Add support for styling with SCSS
- Add support for publication-specific configuration
- Implement asset management for images and fonts
- Implement PDF generation with WeasyPrint